# kurono

./: CMakeLists.txt  Makefile  README.md  boot_qemu_efi.ps1  build.ps1  build_cpp.ps1  build_linux_from_source.ps1  build_with_vsdev.bat  conflict_resolver.c  conflict_resolver.h  kcl_interpreter.c  kcl_interpreter.h  kernel.cpp  kernel.h  kurono.cmd  kurono_complex.cmd  kurono_os.c  linux_bridge.c  linux_bridge.h  linux_sync.c  linux_sync.h  linux_vm_start.ps1  linux_vm_start_gui.ps1  linux_vm_stop.ps1  package_manager.c  package_manager.h  prepare_efi.ps1  security_supr_engine.c  security_supr_engine.h  setup_kurono_linux_micro.ps1  setup_kurono_linux_root.ps1  test_suite.c  windows_bridge.c  windows_bridge.h
